<resources>
    <string name="app_name">RateApp</string>
    <string name="name_converter">Конвертер валюты</string>
    <string name="slash">/</string>
    <string name="nominal">Номинал:</string>
    <string name="rub">RUB</string>
    <string name="rub_label">RUB:</string>
    <string name="hint_label">Введите сумму:</string>
    <string name="rate_label">Курс:</string>
    <string name="start_button">Конвертировать</string>
    <string name="nominal_label">Номинал:</string>
</resources>